fix: 修复在get请求使用body的错误
